# src/app.py
@@ -8,6 +8,9 @@ from core.exceptions import LifeGraphException
 from domains.users.controller import UserController
 from domains.products.controller import ProductController
 from domains.carts.controller import CartController
+from domains.missions.controller import MissionController
+from domains.relationships.controller import RelationshipController
+from domains.graph.controller import GraphController
 
 logger = logging.getLogger()
 logger.setLevel(logging.INFO)
@@ -15,6 +18,9 @@ logger.setLevel(logging.INFO)
 user_ctrl = UserController()
 product_ctrl = ProductController()
 cart_ctrl = CartController()
+mission_ctrl = MissionController()
+relationship_ctrl = RelationshipController()
+graph_ctrl = GraphController()
 
 def handler(event, context):
     logger.info(f"Received event: {event}")
@@ -92,6 +98,12 @@ def handler(event, context):
         elif path == '/products' and method == 'POST':
             return product_ctrl.create_product(event)
         elif path.startswith('/products/') and method == 'GET':
+            if path.endswith('/dependencies'):
+                event['pathParameters'] = {'id': path.split('/')[-2]}
+                return graph_ctrl.get_product_dependencies(event)
+            if path.endswith('/substitutes'):
+                event['pathParameters'] = {'id': path.split('/')[-2]}
+                return graph_ctrl.get_product_substitutes(event)
             event['pathParameters'] = {'id': path.split('/')[-1]}
             return product_ctrl.get_product(event)
         elif path.startswith('/products/') and method == 'PUT':
@@ -118,7 +130,34 @@ def handler(event, context):
         elif re.match(r'^/carts/[^/]+/items$', path) and method == 'POST':
             event['pathParameters'] = {'id': path.split('/')[-2]}
             return cart_ctrl.add_item(event)
-            
+
+        # Mission Routes
+        elif path == '/missions' and method == 'GET':
+            return mission_ctrl.list_missions(event)
+        elif path == '/missions' and method == 'POST':
+            return mission_ctrl.create_mission(event)
+        elif path.startswith('/missions/') and method == 'GET':
+            if path.endswith('/requirements'):
+                event['pathParameters'] = {'id': path.split('/')[-2]}
+                return graph_ctrl.get_mission_requirements(event)
+            event['pathParameters'] = {'id': path.split('/')[-1]}
+            return mission_ctrl.get_mission(event)
+        elif path.startswith('/missions/') and method == 'PUT':
+            event['pathParameters'] = {'id': path.split('/')[-1]}
+            return mission_ctrl.update_mission(event)
+        elif path.startswith('/missions/') and method == 'DELETE':
+            event['pathParameters'] = {'id': path.split('/')[-1]}
+            return mission_ctrl.delete_mission(event)
+
+        # Relationship Routes
+        elif path == '/relationships' and method == 'GET':
+            return relationship_ctrl.list_relationships(event)
+        elif path == '/relationships' and method == 'POST':
+            return relationship_ctrl.create_relationship(event)
+        elif path.startswith('/relationships/') and method == 'DELETE':
+            event['pathParameters'] = {'id': path.split('/')[-1]}
+            return relationship_ctrl.delete_relationship(event)
+
         else:
             return {
                 "statusCode": 404,
